2015-12-06  Charlie Zender  <zender@uci.edu>

	* Account for missing values in curvilinear coordinate center and mask grids when diagnosing extrapolation issues and grid span

	* In nco_grd_nfr(), convert input mask values that are missing value to integer zero for output

2015-12-05  Charlie Zender  <zender@uci.edu>

	* Improve nco_grd_mk() and nco_grd_nfr() regression tests, and make them passable, finally

	* Regression tests for ncpdq now work for netCDF4 in.nc by checking answers independent of chunking text

2015-12-04  Henry Butowsky  <henryb@hush.com>

	* Modify where statment such that the assign statment in where body is NOT missing value aware

2015-12-04  Henry Butowsky  <henryb@hush.com>

	* Parser can now cast variables with (): temp($time,lev,$lat,$lon)=0.0; is equivalent to temp[$time,lev,$lat,$lon]=0.0

	* In the conflict between a function call and a cast the function call wins e.g.,
	tally=three_dmn_var_int.total($time,$lat,$lon) is valid	and total($time,$lat,$lon)=1.0d is invalid

2015-12-01  Charlie Zender  <zender@uci.edu>

	* Allow input masks of any type in nco_grd_nfr() (CICE has tmask as NC_FLOAT) and always convert output to NC_INT

	* Add tmask as usual suspect for mask in nco_grd_nfr()

	* NCO 4.5.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha03 final changes';git push
	git tag -a 4.5.4-alpha03 -m 'Version 4.5.4-alpha03 new features: nfr crv dateline swaths';git push --tags

2015-11-29  Charlie Zender  <zender@uci.edu>

	* Restrict grid to real latitudes and to the 360-degree range detected from input cell-centers

	* nco_grd_nfr() sanity-check for extrapolated corners outside [-90.0,90.0], [-180.0,360.0]

2015-11-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha02 final changes';git push
	git tag -a 4.5.4-alpha02 -m 'Version 4.5.4-alpha02 new features: crd xcs, skl bug, GSL2';git push --tags
