@@ -36,7 +36,7 @@ extern "C" {
 
 /* WIN32 math.h does not define M_PI, needed for dgr2rdn and rdn2dgr */
 #ifndef M_PI
-# define M_PI		3.14159265358979323846
+# define M_PI        3.14159265358979323846264338327950288   /* pi             */
 #endif /* M_PI */
 
   typedef enum nco_rgr_cmd_typ_enm{ /* [enm] Tempest remap type enum */
